# ecommerce-cs-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile.admin  Dockerfile.api  README.md  package-lock.json  package.json  pyproject.toml
admin-web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: admin-ui-ux-audit.md  admin-web-ui-ux-audit.md  application-technology-architecture.md  ci-cd.md  customer-admin-design.md  database-migrations.md  deployment-artifacts.md  deployment.md  development-handoff.md  development-readiness.md  development-setup.md  error-codes.md  http-api-design.md  implementation-plan.md  openapi.yaml  requirements-test-matrix.md  runbook.md  security-local-files.md  session-transcript.md  system-admin-design.md  system-admin-ui-prototype.html  system-architecture.html  system-architecture.md  technical-options.md  testing.md
ecommerce_cs_agent/: __init__.py  release_gate.py
evals/: __init__.py  assertions.py  cli.py  gate.py  generator.py  judge.py  models.py  runner.py  simulation.py
migrations/: 001_initial.sql  002_v1_runtime_alignment.sql  003_canonical_runtime_alignment.sql  004_admin_auth_runtime.sql  005_legacy_runtime_defaults.sql  006_system_admin_ops.sql  007_product_knowledge_storage.sql  008_admin_auth_schema_repair.sql  009_product_import_drafts.sql  010_admin_user_fcihome_account_sub.sql  011_decision_idempotency_store_scope.sql  012_system_admin_llm_governance.sql  013_sacs_llm_node_configuration.sql
scripts/: acs_local_env.mjs  acs_port_forward.mjs  (+8 more)
(+212 files in other folders)
