[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ecommerce-cs-agent"
version = "0.1.0"
description = "Ecommerce customer service Agent API, Admin shell, and evaluation tooling."
requires-python = ">=3.12,<3.14"
dependencies = [
  "fastapi>=0.115",
  "httpx>=0.27",
  "pydantic>=2.7",
  "psycopg[binary]>=3.2",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]

[tool.setuptools.packages.find]
include = ["ecommerce_cs_agent*", "evals*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
