[project]
name = "ecommerce-cs-agent"
version = "0.1.0"
description = "Ecommerce customer service agent v1 API."
requires-python = ">=3.11"
dependencies = [
  "anyio>=4,<5",
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.34,<1",
  "pydantic>=2.8,<3",
  "psycopg[binary]>=3.2,<4",
  "bcrypt>=4.1,<5",
  "cryptography>=45,<47",
  "langgraph>=1.2,<2",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "jsonschema[format]>=4.23,<5",
  "pytest>=8,<9",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ecommerce_cs_agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
